[package]
name = "arti-rpcserver"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["The Tor Project, Inc.", "eta <eta@torproject.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Backend functionality for Arti's RPC service"
keywords = ["tor", "arti", "rpc"]
categories = ["asynchronous"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
full = []

[dependencies]
arti-client = { path = "../arti-client", version = "0.9.0", features = ["rpc"] }
asynchronous-codec = { version = "0.6.0", features = ["json"] }
bytes = "1"
erased-serde = "0.3.25"
futures = "0.3.14"
# I hope we can use this again, assuming our MPL-2.0 issues get straightened
# out.
# generational-arena = "0.2.8"
pin-project = "1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.50"
thiserror = "1"
tor-async-utils = { path = "../tor-async-utils", version = "0.1.0" }
tor-error = { path = "../tor-error", version = "0.5.0" }
tor-rpcbase = { path = "../tor-rpcbase", version = "0.1.0" }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.9.0" }
tracing = "0.1.36"
typetag = "0.2.7"

[dev-dependencies]
futures-await-test = "0.3.0"
