[package]
name = "arti-rpcserver"
version = "0.22.0"
edition = "2021"
rust-version = "1.70"
authors = ["The Tor Project, Inc.", "eta <eta@torproject.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Backend functionality for Arti's RPC service"
keywords = ["tor", "arti", "rpc"]
categories = ["asynchronous"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
default = []
full = [
    "arti-client/full",
    "tor-async-utils/full",
    "tor-error/full",
    "tor-rpcbase/full",
    "tor-rtcompat/full",
    "tor-bytes/full",
    "tor-llcrypto/full",
    "tor-proto/full",
    "describe-methods", "oneshot-fused-workaround/full", "slotmap-careful/full",
]
describe-methods = ["tor-rpcbase/describe-methods"]

[dependencies]
arti-client = { path = "../arti-client", version = "0.22.0", features = ["rpc"] }
async-trait = "0.1.54"
asynchronous-codec = { version = "0.7.0", features = ["json"] }
base64ct = "1.5.1"
bytes = "1"
derive-deftly = "0.14"
derive_more = "0.99.3"
erased-serde = "0.4.2"
futures = "0.3.14"
oneshot-fused-workaround = { path = "../oneshot-fused-workaround", version = "0.1.0" }
pin-project = "1"
rand = "0.8"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.50"
slotmap-careful = { path = "../slotmap-careful", version = "0.1.0" }
thiserror = "1"
tiny-keccak = { version = "2", features = ["kmac"] }
tor-async-utils = { path = "../tor-async-utils", version = "0.22.0" }
tor-bytes = { path = "../tor-bytes", version = "0.22.0" }
tor-error = { path = "../tor-error", version = "0.22.0" }
tor-llcrypto = { path = "../tor-llcrypto", version = "0.22.0" }
tor-proto = { path = "../tor-proto", version = "0.22.0", features = ["stream-ctrl"] }
tor-rpcbase = { path = "../tor-rpcbase", version = "0.22.0" }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.22.0" }
tracing = "0.1.36"
typetag = "0.2.7"
weak-table = "0.3.0"
zeroize = "1"

[dev-dependencies]
futures-await-test = "0.3.0"
tor-basic-utils = { path = "../tor-basic-utils", version = "0.22.0" }
