[package]
name = "arti-testing"
version = "0.8.2"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Tools for testing the Arti Tor implementation."
keywords = ["tor", "arti", "privacy", "anonymity"]
categories = ["command-line-utilities", "cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
publish = false

[features]

[dependencies]
anyhow = "1.0.23"
arti = { package = "arti", path = "../arti", version = "1.1.2" }
arti-client = { package = "arti-client", path = "../arti-client", version = "0.8.2", features = [
    "dirfilter",
] }
async-trait = "0.1.2"
cfg-if = "1.0.0"
clap = "3.2.20"
config = { version = "0.13", default-features = false }
futures = "0.3.14"
pin-project = "1"
rand = "0.8"
serde = { version = "1.0.103", features = ["derive"] }
tokio = { version = "1.7", features = ["signal", "macros"] }
tor-checkable = { path = "../tor-checkable", version = "0.4.2", features = ["experimental-api"] }
tor-config = { path = "../tor-config", version = "0.7.2" }
tor-dirmgr = { package = "tor-dirmgr", path = "../tor-dirmgr", version = "0.9.2", features = [
    "dirfilter",
] }
tor-error = { path = "../tor-error", version = "0.4.1" }
tor-netdoc = { package = "tor-netdoc", path = "../tor-netdoc", version = "0.6.2", features = [
    "experimental-api",
    "dangerous-expose-struct-fields",
] }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.8.1" }
tracing = "0.1.18"
tracing-appender = "0.2.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
