[package]
name = "arti-ureq"
version = "0.1.0"
edition = "2021"
authors = ["The Tor Project, Inc.", "Niel Duysters"]
license = "MIT OR Apache-2.0"
description = "Library to use Arti in the ureq http client"
keywords = ["ureq", "http", "client"]
categories = ["network-programming"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
arti-client = { path = "../arti-client" }
async-std = { version = "1.7.0", optional = true }
educe = "0.4.6"
futures = "0.3.14"
thiserror = "2"
tokio = { version = "1.7", optional = true }
tor-error = { path = "../tor-error" }
tor-proto = { path = "../tor-proto", features = [ "stream-ctrl" ] }
tor-rtcompat = { path = "../tor-rtcompat", default-features = false }
ureq = { version = "~3.0", default-features = false, features = ["rustls-no-provider", "platform-verifier"] }

[dev-dependencies]
serde_json = "1.0.104"
test-temp-dir = { version = "0.3.0", path = "../test-temp-dir" }

[features]
default = ["rustls", "tokio"]
rustls = ["ureq/rustls", "tor-rtcompat/rustls"]
native-tls = ["ureq/native-tls", "tor-rtcompat/native-tls"]
tokio = ["tor-rtcompat/tokio", "dep:tokio"]
async-std = ["tor-rtcompat/async-std", "dep:async-std"]
