[package]
name = "arti-ureq"
version = "0.33.0"
edition = "2024"
authors = ["The Tor Project, Inc.", "Niel Duysters"]
license = "MIT OR Apache-2.0"
description = "Library to use Arti in the ureq http client"
keywords = ["ureq", "http", "client"]
categories = ["network-programming"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
arti-client = { path = "../arti-client", version = "0.33.0" }
async-std = { version = "1.7.0", optional = true }
educe = "0.4.6"
futures = "0.3.14"
thiserror = "2"
tokio = { version = "1.7", optional = true }
tor-error = { path = "../tor-error", version = "0.33.0" }
tor-proto = { path = "../tor-proto", features = [ "stream-ctrl" ], version = "0.33.0" }
tor-rtcompat = { path = "../tor-rtcompat", default-features = false, version = "0.33.0" }
ureq = { version = "~3.0.11", default-features = false, features = ["rustls-no-provider", "platform-verifier"] }

[dev-dependencies]
serde_json = "1.0.104"
test-temp-dir = { version = "0.3.5", path = "../test-temp-dir" }

[features]
default = ["native-tls", "tokio"]

rustls = ["ureq/rustls", "tor-rtcompat/rustls"]

native-tls = ["ureq/native-tls", "tor-rtcompat/native-tls"]

tokio = ["tor-rtcompat/tokio", "dep:tokio"]

async-std = ["tor-rtcompat/async-std", "dep:async-std"]
full = [
    "arti-client/full",
    "tor-error/full",
    "tor-proto/full",
    "tor-rtcompat/full",
    "native-tls",
    "tokio",
    "async-std",
    "rustls",
]

__is_nonadditive = []
